test/validator/samples/prop-slot/input.svelte
<script>
	import Widget from './Widget.svelte';
</script>

<Widget slot='foo'/>
