test/compiler-errors/samples/component-slot-nested-error/main.svelte
<script>
	import Nested from './irrelevant';
</script>

<Nested>
	<div slot="slot1">
		<div slot="slot2" />
	</div>
</Nested>
